...
            Divider()

            Button(action: { showingLocationList = true }) {
                Label("Manage Locations", systemImage: "map")
            }
        } label: {
            Label("Add", systemImage: "plus")
        }
    }

    // MARK: - Actions

    /// Deletes assignments at the specified offsets
...
